crates/lexer/src/poor/snapshots/dapic_lexer__poor__cursor__tests__tokenize_attribute.snap
---
source: crates/lexer/src/poor/cursor.rs
expression: vec
---
[
    Token {
        kind: At,
        length: 1,
    },
    Token {
        kind: Ident,
        length: 6,
    },
    Token {
        kind: Colon,
        length: 1,
    },
    Token {
        kind: Whitespace,
        length: 1,
    },
    Token {
        kind: Ident,
        length: 4,
    },
]
